# GPU

./: CMakeLists.txt  Makefile  TP-Opengl.txt  color.vs  color_flou.fs  color_grey.fs  main.cpp  redcircle.fs  texture.fs
TP2/TP2_geometry_shader_v2/etudiant/tp_gpu_geometry_shader/: basic.fs  change_color.fs  color.fs  eclate.gs  glhelper.cpp  glhelper.h  gonfle.gs  line.gs  main.cpp  norm.gs  texture.fs  texture_geo.fs
TP2/TP2_geometry_shader_v2/solution/tp_gpu_geometry_shader/: basic.vs  glhelper.cpp  glhelper.h  main.cpp  mesh.cpp  mesh.h
TP2/TP2_geometry_shader_v2/solution/tp_gpu_geometry_shader/correction/: basicred.fs  computenormales.gs  culling.gs  explode.gs  inflate.gs  normalcolor.fs  shownormales.gs  showtriangles.gs  textures_after_geom.fs
TP2/tp_gpu_geometry_shader/: Makefile  couleur.fs  glhelper.cpp  glhelper.h  main.cpp  mesh.cpp  mesh.h
TP3/tf/: Makefile  main.cpp  mesh.cpp  mesh.h
TP3/tf/shaders/: tf.vs
TP3/tp_gpu_fbo/: basic.fs  glhelper.cpp  glhelper.h  main.cpp  mesh.cpp  mesh.h
TP4/projet_etudiant/tp_gpu_cs/: basic.fs  basic.vs  camera.cpp  cs.vs  main.cpp  opengl
TP4/projet_etudiant/tp_gpu_tf/: Makefile  basic.fs  basic.vs  glhelper.cpp  glhelper.h  main.cpp  opengl  tf.vs
TP5/tp_normalmapping_parallax/: main.cpp  mesh.cpp
TP5/tp_normalmapping_parallax/shaders/: simple.fs  simple.vs
